--- a/index.html
+++ b/index.html
@@ -60,7 +60,7 @@
 </head>
 
 <body>
-    <div class="hero_area" style="height: 100vh; display: flex; flex-direction: column; background-image: url('images/basketball_thumbnail.jpg'); background-size: cover; background-position: center; background-attachment: fixed;">
+    <div class="hero_area" style="height: 100vh; display: flex; flex-direction: column; background-image: url('images/basketball_thumbnail.jpg'); background-size: cover; background-position: center">
         <!-- header section strats -->
         <header class="header_section">
             <div class="container-fluid">
